--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react-slick": "^0.28.1",
+    "react-wow": "^1.0.0",
+    "slick-carousel": "^1.8.1",
+    "web-vitals": "^1.1.1",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
