--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-wow": "^1.0.0",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.1.1",
-    "wowjs": "^1.1.3"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
