--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "isotope-layout": "^3.0.6",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -58,8 +59,10 @@
     "react-bootstrap": "^1.5.2",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-isotope": "^1.0.7",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.2",
     "react-slick": "^0.28.1",
     "react-wow": "^1.0.0",
     "resolve": "1.18.1",
